<resources>
    <string name="app_name">Ychat</string>
    <string name="title_activity_login">登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">账号格式错误</string>
    <string name="error_invalid_password">密码格式错误</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_register">新用户注册</string>
    <string name="login_read">我已阅读并同意</string>
    <string name="login_service_clause">服务条款</string>
</resources>
